# nonebot-plugin-aawarframe

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_aawarframe/: __init__.py  commands.py  data_fetcher.py  data_processor.py
nonebot_plugin_aawarframe/assets/: ExportRegions_zh.json  conquest_zh.json  faction_type.json  mission_type.json  variables.json
nonebot_plugin_aawarframe/assets/templates/: archimedea.html  current_arbys.html  eidolon_clock.html  s_arbys.html  today_arbys.html
nonebot_plugin_aawarframe/common/: browser_manager.py
nonebot_plugin_aawarframe/core/: data_source.py
nonebot_plugin_aawarframe/data_sources/: __init__.py  conquest_base.py  deep_archimedea.py  temporal_archimedea.py
nonebot_plugin_aawarframe/renderers/: __init__.py  html_renderer.py
nonebot_plugin_aawarframe/service/arbys/: __init__.py
nonebot_plugin_aawarframe/service/archimedea/: data_processor.py  deep.py  temporal.py
nonebot_plugin_aawarframe/service/cycle/: eidolon.py
nonebot_plugin_aawarframe/service/earth/: __init__.py
nonebot_plugin_aawarframe/util/: browser_manager.py
