[project]
name = "nonebot-plugin-aawarframe"
version = "0.2.5"
description = "aa 的 Warframe 助手"
authors = [
    {name = "nekox41",email = "aameow@outlook.com"},
]
dependencies = ["nonebot2>=2.5.0", "httpx~=0.28.1", "nonebot-plugin-htmlkit>=0.1.0rc5", "nonebot-adapter-onebot>=2.4.6", "playwright>=1.40.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_aawarframe*"]

[tool.setuptools.package-data]
nonebot_plugin_aawarframe = ["assets/**/*"]


[tool.pdm]
distribution = false

[tool.setuptools]
packages = ["nonebot_plugin_aawarframe"]